--- a/hello-svc/package.json
+++ b/hello-svc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello_svc",
+  "name": "hello-svc",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,6 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.4"
+    "mongodb": "^3.1.6"
   }
 }
